--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/speed-insights": "^1.3.0",
-    "next": "14.2.12",
+    "@vercel/speed-insights": "^1.3.1",
+    "next": "^14.2.33",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
     "@types/react": "19.2.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.12",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.0.7",
     "typescript": "^5.6.3"
   }
 }
