--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@vercel/speed-insights": "^1.3.1",
     "next": "^14.2.33",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.34.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
-    "@types/react": "19.2.7",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.0.7",
+    "@types/react": "^18.2.79",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.33",
     "typescript": "^5.6.3"
   }
 }
